Source/WebKit/GPUProcess/GPUProcess.cpp
@@ -74,8 +74,14 @@
 namespace WebKit {
 using namespace WebCore;
 
+// We wouldn't want the GPUProcess to repeatedly exit then relaunch when under memory pressure. In particular, we need to make sure the
+// WebProcess has a change to schedule work after the GPUProcess get launched. For this reason, we make sure that the GPUProcess never
+// idle-exits less than 5 seconds after getting launched. This amount of time should be sufficient for the WebProcess to schedule work
+// work in the GPUProcess.
+constexpr Seconds minimumLifetimeBeforeIdleExit { 5_s };
 
 GPUProcess::GPUProcess(AuxiliaryProcessInitializationParameters&& parameters)
+    : m_idleExitTimer(*this, &GPUProcess::tryExitIfUnused)
 {
     initialize(WTFMove(parameters));
     RELEASE_LOG(Process, "%p - GPUProcess::GPUProcess:", this);
@@ -129,12 +135,6 @@ bool GPUProcess::shouldTerminate()
 bool GPUProcess::canExitUnderMemoryPressure() const
 {
     ASSERT(isMainRunLoop());
-    // To avoid exiting the GPUProcess too aggressively while under memory pressure, we don't exit if we've been running
-    // for less than 5 seconds. In case of simulated memory pressure, we ignore this rule to avoid generating flakiness
-    // in our benchmarks and tests.
-    if ((MonotonicTime::now() - m_creationTime) < 5_s && !MemoryPressureHandler::singleton().isSimulatingMemoryPressure())
-        return false;
-
     for (auto& webProcessConnection : m_webProcessConnections.values()) {
         if (!webProcessConnection->allowsExitUnderMemoryPressure())
             return false;
@@ -154,8 +154,24 @@ void GPUProcess::tryExitIfUnusedAndUnderMemoryPressure()
 void GPUProcess::tryExitIfUnused()
 {
     ASSERT(isMainRunLoop());
-    if (!canExitUnderMemoryPressure())
+    if (!canExitUnderMemoryPressure()) {
+        m_idleExitTimer.stop();
         return;
+    }
+
+    // To avoid exiting the GPUProcess too aggressively while under memory pressure and make sure the WebProcess gets a
+    // change to schedule work, we don't exit if we've been running for less than |minimumLifetimeBeforeIdleExit|.
+    // In case of simulated memory pressure, we ignore this rule to avoid flakiness in our benchmarks and tests.
+    auto lifetime = MonotonicTime::now() - m_creationTime;
+    if (lifetime < minimumLifetimeBeforeIdleExit && !MemoryPressureHandler::singleton().isSimulatingMemoryPressure()) {
+        RELEASE_LOG(Process, "GPUProcess::tryExitIfUnused: GPUProcess is idle and under memory pressure but it is not exiting because it has just launched");
+        // Check again after the process have lived long enough (minimumLifetimeBeforeIdleExit) to see if the GPUProcess
+        // can idle-exit then.
+        if (!m_idleExitTimer.isActive())
+            m_idleExitTimer.startOneShot(minimumLifetimeBeforeIdleExit - lifetime);
+        return;
+    }
+    m_idleExitTimer.stop();
 
     RELEASE_LOG(Process, "GPUProcess::tryExitIfUnused: GPUProcess is exiting because we are under memory pressure and the process is no longer useful.");
     parentProcessConnection()->send(Messages::GPUProcessProxy::ProcessIsReadyToExit(), 0);
